@@ -1,3 +1,10 @@
+2011-04-18 Miguel de Dios  <miguel.dedios@artica.es>
+
+	Merged change from trunk.
+	
+	* operation/agentes/estado_monitores.php: added a toggle button to show the
+	the entire value or sub string for value (by default).
+
 2011-04-18 Javier Lanz <javier.lanz@artica.es>
 
 	* include/functions_filemanager.php: Fixed a problem with html entities
